// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PvPoke baseline > analyze 1`] = `
{
  "score": {
    "battle": 83.7,
    "coveredOpponents": [
      "altaria",
      "annihilape_shadow",
      "araquanid",
      "azumarill",
      "carbink",
      "charjabug",
      "clodsire",
      "corsola_galarian",
      "corviknight",
      "cradily",
      "cramorant",
      "deoxys_defense",
      "diggersby",
      "dondozo",
      "dunsparce",
      "electrode_hisuian",
      "empoleon",
      "fearow",
      "feraligatr",
      "florges",
      "forretress_shadow",
      "forretress_shadow",
      "furret",
      "guzzlord",
      "hippowdon_shadow",
      "jellicent",
      "jumpluff",
      "kingdra",
      "malamar",
      "mantine",
      "marowak",
      "medicham",
      "melmetal",
      "mimikyu",
      "morpeko_full_belly",
      "ninetales_shadow",
      "quagsire_shadow",
      "quagsire_shadow",
      "sableye",
      "sableye_shadow",
      "snorlax",
      "snorlax_shadow",
      "stunfisk",
      "talonflame",
      "thievul",
      "tinkaton",
      "vigoroth",
    ],
    "difficulty": "Moderate",
    "difficultyWhy": "Balanced team; Feraligatr needs to bait one shield",
    "factors": {
      "accessibility": 73.8,
      "consistency": 56.8,
      "cost": 100,
      "coverage": 99,
      "safety": 80,
    },
    "fit": "Strong",
    "topUncovered": 0,
    "total": 84.4,
    "uncoveredOpponents": [
      "rillaboom",
    ],
  },
  "species": [
    "morpeko_full_belly",
    "feraligatr",
    "stunfisk_galarian",
  ],
}
`;

exports[`PvPoke baseline > counters 1`] = `
[
  {
    "antiMeta": 70,
    "id": "bellibolt",
  },
  {
    "antiMeta": 65.2,
    "id": "mimikyu",
  },
  {
    "antiMeta": 64.7,
    "id": "cramorant",
  },
  {
    "antiMeta": 62.3,
    "id": "melmetal",
  },
  {
    "antiMeta": 59.9,
    "id": "electrode_hisuian",
  },
  {
    "antiMeta": 58.8,
    "id": "walrein",
  },
  {
    "antiMeta": 58.1,
    "id": "forretress",
  },
  {
    "antiMeta": 58,
    "id": "togedemaru",
  },
  {
    "antiMeta": 57.8,
    "id": "raichu",
  },
  {
    "antiMeta": 57.6,
    "id": "raikou_shadow",
  },
  {
    "antiMeta": 56.7,
    "id": "forretress_shadow",
  },
  {
    "antiMeta": 56.7,
    "id": "moltres_galarian",
  },
  {
    "antiMeta": 56.6,
    "id": "morpeko_full_belly",
  },
  {
    "antiMeta": 56.3,
    "id": "electivire_shadow",
  },
  {
    "antiMeta": 55.9,
    "id": "zweilous",
  },
]
`;

exports[`PvPoke baseline > recommend 1`] = `
{
  "finalists": 25,
  "teams": [
    {
      "id": "e38dcc08-b49d0982-fd125d2a",
      "score": {
        "battle": 83.7,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; Feraligatr needs to bait one shield",
        "factors": {
          "accessibility": 73.8,
          "consistency": 56.8,
          "cost": 86.3,
          "coverage": 99,
          "safety": 80,
        },
        "fit": "Strong",
        "topUncovered": 0,
        "total": 82.3,
        "uncoveredOpponents": [
          "rillaboom",
        ],
      },
      "species": [
        "morpeko_full_belly",
        "feraligatr",
        "stunfisk_galarian",
      ],
      "structure": "ABC",
    },
    {
      "id": "421fee2b-b49d0982-5f1ce392",
      "score": {
        "battle": 80.6,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; Feraligatr needs to bait one shield",
        "factors": {
          "accessibility": 84.4,
          "consistency": 56.6,
          "cost": 91.8,
          "coverage": 92.9,
          "safety": 80,
        },
        "fit": "Strong",
        "topUncovered": 0,
        "total": 82.1,
        "uncoveredOpponents": [
          "melmetal",
          "mimikyu",
          "snorlax_shadow",
          "stunfisk",
        ],
      },
      "species": [
        "thievul",
        "feraligatr",
        "altaria",
      ],
      "structure": "ABC",
    },
    {
      "id": "e38dcc08-05ede01d-5f1ce392",
      "score": {
        "battle": 78.2,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; pick the right switch",
        "factors": {
          "accessibility": 93.2,
          "consistency": 55,
          "cost": 99.9,
          "coverage": 98.8,
          "safety": 60,
        },
        "fit": "Strong",
        "topUncovered": 0,
        "total": 81.9,
        "uncoveredOpponents": [
          "medicham",
        ],
      },
      "species": [
        "morpeko_full_belly",
        "sandslash_alolan",
        "altaria",
      ],
      "structure": "ABC",
    },
    {
      "id": "bcb8b998-c9a0cfbd-5da95a2b",
      "score": {
        "battle": 85,
        "coveredOpponents": [
          "altaria",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; pick the right switch",
        "factors": {
          "accessibility": 74.8,
          "consistency": 55.3,
          "cost": 74.5,
          "coverage": 97.3,
          "safety": 90,
        },
        "fit": "Strong",
        "topUncovered": 1,
        "total": 81.8,
        "uncoveredOpponents": [
          "annihilape_shadow",
          "medicham",
        ],
      },
      "species": [
        "greninja_shadow",
        "melmetal",
        "clodsire",
      ],
      "structure": "ABC",
    },
    {
      "id": "e38dcc08-aa19de9c-46e5de11",
      "score": {
        "battle": 81.4,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; Aurorus needs to bait one shield",
        "factors": {
          "accessibility": 80.3,
          "consistency": 65.5,
          "cost": 83.5,
          "coverage": 100,
          "safety": 60,
        },
        "fit": "Strong",
        "topUncovered": 0,
        "total": 80.6,
        "uncoveredOpponents": [],
      },
      "species": [
        "morpeko_full_belly",
        "corviknight",
        "aurorus",
      ],
      "structure": "ABC",
    },
    {
      "id": "4afe5d1c-aa19de9c-5da95a2b",
      "score": {
        "battle": 77.7,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "deoxys_defense",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; pick the right switch",
        "factors": {
          "accessibility": 80.3,
          "consistency": 60.7,
          "cost": 75.9,
          "coverage": 95,
          "safety": 60,
        },
        "fit": "Strong",
        "topUncovered": 0,
        "total": 76.8,
        "uncoveredOpponents": [
          "cramorant",
          "diggersby",
        ],
      },
      "species": [
        "umbreon",
        "corviknight",
        "clodsire",
      ],
      "structure": "ABC",
    },
    {
      "id": "0fecc4ca-aa19de9c-5abd962d",
      "score": {
        "battle": 77.6,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Easy",
        "difficultyWhy": "ABB line: switch either way, no baiting needed",
        "factors": {
          "accessibility": 78.6,
          "consistency": 68.5,
          "cost": 74.9,
          "coverage": 96,
          "safety": 50,
        },
        "fit": "Strong",
        "topUncovered": 1,
        "total": 76.4,
        "uncoveredOpponents": [
          "charjabug",
          "melmetal",
        ],
      },
      "species": [
        "zweilous",
        "corviknight",
        "corviknight_shadow",
      ],
      "structure": "ABB",
    },
    {
      "id": "11e7b567-aa19de9c-bcb8b998",
      "score": {
        "battle": 74.2,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "snorlax_shadow",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; pick the right switch",
        "factors": {
          "accessibility": 76.9,
          "consistency": 59.4,
          "cost": 85.7,
          "coverage": 93.7,
          "safety": 50,
        },
        "fit": "Strong",
        "topUncovered": 1,
        "total": 75.2,
        "uncoveredOpponents": [
          "charjabug",
          "electrode_hisuian",
          "melmetal",
          "stunfisk",
        ],
      },
      "species": [
        "golem_alolan_shadow",
        "corviknight",
        "greninja_shadow",
      ],
      "structure": "ABC",
    },
    {
      "id": "5a398361-46d4e91f-fd125d2a",
      "score": {
        "battle": 70.3,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "diggersby",
          "dondozo",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "medicham",
          "melmetal",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax_shadow",
          "stunfisk",
          "talonflame",
          "thievul",
          "tinkaton",
          "vigoroth",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; Flamigo needs to bait one shield",
        "factors": {
          "accessibility": 74.5,
          "consistency": 50,
          "cost": 99.7,
          "coverage": 95.6,
          "safety": 40,
        },
        "fit": "Solid",
        "topUncovered": 0,
        "total": 73.9,
        "uncoveredOpponents": [
          "mimikyu",
          "snorlax",
        ],
      },
      "species": [
        "raichu_alolan",
        "flamigo",
        "stunfisk_galarian",
      ],
      "structure": "ABC",
    },
    {
      "id": "421fee2b-ea9106be-5da95a2b",
      "score": {
        "battle": 70.5,
        "coveredOpponents": [
          "altaria",
          "annihilape_shadow",
          "araquanid",
          "azumarill",
          "carbink",
          "charjabug",
          "clodsire",
          "corsola_galarian",
          "corviknight",
          "cradily",
          "cramorant",
          "deoxys_defense",
          "dunsparce",
          "electrode_hisuian",
          "empoleon",
          "fearow",
          "feraligatr",
          "florges",
          "forretress_shadow",
          "forretress_shadow",
          "furret",
          "guzzlord",
          "hippowdon_shadow",
          "jellicent",
          "jumpluff",
          "kingdra",
          "malamar",
          "mantine",
          "marowak",
          "melmetal",
          "mimikyu",
          "morpeko_full_belly",
          "ninetales_shadow",
          "quagsire_shadow",
          "quagsire_shadow",
          "sableye",
          "sableye_shadow",
          "snorlax",
          "stunfisk",
          "talonflame",
          "thievul",
          "rillaboom",
        ],
        "difficulty": "Moderate",
        "difficultyWhy": "Balanced team; pick the right switch",
        "factors": {
          "accessibility": 73.5,
          "consistency": 52.7,
          "cost": 84.5,
          "coverage": 84.7,
          "safety": 60,
        },
        "fit": "Solid",
        "topUncovered": 0,
        "total": 72.2,
        "uncoveredOpponents": [
          "diggersby",
          "dondozo",
          "medicham",
          "snorlax_shadow",
          "tinkaton",
          "vigoroth",
        ],
      },
      "species": [
        "thievul",
        "lickilicky",
        "clodsire",
      ],
      "structure": "ABC",
    },
  ],
  "triosScored": 9880,
}
`;
